<resources>
    <string name="app_name">Wifi Auto Login</string>
    <string name="app_version">Current Version: v%1$s(%2$d)</string>
    <string name="app_long_name">i-NAU-Home Auto Login</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="login_success">Auto Login Success!</string>
    <string name="login_failed">Auto Login Failed! %1$s</string>
    <string name="login_id">Login ID:</string>
    <string name="login_password">Password:</string>
    <string name="login_type">Login Type:</string>
    <string name="set_it">Set it now</string>
    <string name="save">Save</string>
    <string name="permission_attention">You must grant permission first!</string>
    <string name="permission_status">Grant location permission first! (The recommended choice is always allowed) \nNow status:</string>
    <string name="gps_attention">You must turn on GPS to get Wifi SSID! Wifi SSID is necessary for checking correct wifi.</string>
    <string name="turn_on_gps">GPS Settings</string>
    <string name="granted">Granted</string>
    <string name="need_grant">Need Grant</string>
    <string name="save_success">Saved successfully!</string>
    <string name="notification_channel">i-NAU Auto Login Notification</string>
    <string name="foreground_channel">Foreground Notification</string>
    <string name="notification_channel_des">Report auto login result</string>
    <string name="foreground_channel_des">Show foreground notification</string>
    <string name="logout_attention">If you can\'t login on other devices because of \'Limit User Err\', try logout here.</string>
    <string name="logout">Logout</string>
    <string name="manual_login">Manual Login</string>
    <string name="manual_login_attention">If you have already connected to wifi and could\'t auto login, try manual login here.</string>
    <string name="logout_success">Logout Success!</string>
    <string name="logout_failed">Logout Failed! %1$s</string>
    <string name="about">About</string>
    <string name="enable_listener">Listener Settings</string>
    <string name="enabled">Enabled!</string>
    <string name="already_logon">You have already logon.</string>
    <string name="login_result_error">Login result check error!</string>
    <string name="only_support_miui_system">This function only support MIUI system!</string>
    <string name="miui_system_support_attention">You should also enable receiving boot broadcast in system settings!</string>
    <string name="need_disable_notification_service">You need disable notification listener service first!</string>
    <string name="need_disable_accessibility_service">You need disable accessibility service first!</string>
    <string name="listener_service_attention">Choose and enable one wifi listener to login automatically. Lock App in background and enable boot broadcast first.</string>
    <string name="not_enabled_listener">This wifi listener was\'t been chosen in application.</string>
    <string name="about_application">Made By XFY9326\n\nOpen Source Website: \nhttps://github.com/XFY9326/NauHomeLogin\n\nOpen Source Licence: GPL 3.0</string>
    <string name="listener_service_introduce">This service is used to listening to network changes and login i-NAU-* Wifi.</string>
    <string name="start_settings_accessibility_activity_error">Unable to launch accessibility service settings!</string>
    <string name="start_settings_notification_activity_error">Unable to launch notification listener service settings!</string>
    <string name="auto_login_service">Wifi Auto Login Service</string>
    <string name="enable_foreground_service">Enable foreground service. Show notification to make sure service running in background.</string>
    <string name="manually_restart_service">Manually restart service to take effect</string>
    <string name="attention">Attention</string>
    <string name="try_login_when_ssid_unknown">When WiFi SSID is unknown, it will automatically try to log in when the login server is available.</string>
    <string name="try_login_when_ssid_unknown_attention">It is highly recommended to start this feature, as the application may not be able to obtain SSID when running in the background.</string>
    <string name="notification_permission_attention">You should give notification permission in system settings first!</string>
</resources>