<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:gravity="center"
            android:text="@string/app_long_name"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editText_login_id"
                    android:text="@string/login_id"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText_login_id"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editText_login_password"
                    android:text="@string/login_password"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText_login_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/spinner_login_type"
                    android:text="@string/login_type"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/spinner_login_type"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/login_type_name"
                    tools:listitem="@android:layout/simple_list_item_1" />

            </LinearLayout>

            <Button
                android:id="@+id/button_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/button_grant_permission"
                    android:text="@string/permission_status"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_grant_permission"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/button_grant_permission"
                    android:text="@string/gps_attention"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_gps_settings"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/turn_on_gps" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/button_listener_service"
                    android:text="@string/listener_service_attention"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_listener_service"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/enable_listener" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/button_foreground_service"
                    android:text="@string/enable_foreground_service"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/button_foreground_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView_permission_attention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_attention"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/button_login"
                    android:text="@string/manual_login_attention"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/manual_login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/button_logout"
                    android:text="@string/logout_attention"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_logout"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/logout" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>